# deflate_compression_rs

./: .gitignore  Cargo.toml
src/: lib.rs
src/compress_algorithm/: mod.rs  no_compress.rs
src/utils/: crc32.rs  datetime.rs  mod.rs
src/utils/tests/: crc32.rs  datetime.rs  mod.rs
src/zip/: mod.rs
src/zip/files/: file_descriptor.rs  local_file_header.rs  mod.rs
src/zip/test/: mod.rs
